--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,9 @@ version '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
-
+tasks.withType(JavaCompile){
+    options.encoding = "UTF-8"
+}
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
